# cellular-automata-rs

./: Cargo.toml
src/: block.rs  gui.rs  main.rs  rule.rs  settings.rs
src/graphics/: display.rs
src/graphics/wgpud/: colormap.rs  instance.rs  lib.rs  model.rs  resources.rs  shader.wgsl
