[package]
name = "cellular-automata-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.18"
ndarray = "0.13.0"
egui_glow = "0.18"
glow = "0.11"
three-d = { version = "0.11", default-features = false }